Update HotSpotSurvey.md